bag-fix  vertical-align

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a:hover {
   text-decoration: none;
 }
 
-.fp-tableCell {
+.section__header > .fp-tableCell {
   vertical-align: baseline !important;
 }
 
@@ -123,8 +123,25 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+/* section */
 
-/* screen one */
+section {
+  animation: scaleUp 1s ease-out forwards;
+}
+
+@media screen and (max-width: 1024px) {
+  section {
+    padding: 90px 0;
+  }
+}
+
+.section__title {
+  max-width: 427px;
+  font-size: 55px;
+  font-weight: 400;
+}
+
+/* screen one Header */
 
 .container__header {
   display: flex;
@@ -274,24 +291,17 @@ body {
 .fade-in.active {
   opacity: 1;
 }
-/* section */
-
-section {
-  padding: 40px 0;
-  animation: scaleUp 1s ease-out forwards;
-}
-
-.section__title {
-  max-width: 427px;
-  font-size: 55px;
-  font-weight: 400;
-}
 
 /* hero */
 
 .hero {
   position: relative;
   z-index: -2000;
+}
+@media screen and (max-width: 1024px) {
+  .hero {
+    padding: 0;
+  }
 }
 .container__hero {
   margin-left: 94px;
@@ -503,22 +513,6 @@ section {
   }
 }
 
-.accordion-panel:nth-of-type(1) {
-  --_panel-color: hsl(160, 70%, 50%);
-}
-.accordion-panel:nth-of-type(2) {
-  --_panel-color: hsl(184, 70%, 50%);
-}
-.accordion-panel:nth-of-type(3) {
-  --_panel-color: hsl(220, 70%, 50%);
-}
-.accordion-panel:nth-of-type(4) {
-  --_panel-color: hsl(350, 70%, 50%);
-}
-.accordion-panel:nth-of-type(5) {
-  --_panel-color: hsl(20, 70%, 50%);
-}
-
 .accordion-panel:has([aria-expanded='true']) {
   flex-basis: clamp(15rem, 40vh, 20rem);
   flex-grow: 1;
@@ -526,11 +520,6 @@ section {
 
 .accordion-trigger {
   outline: 0;
-}
-
-.accordion-panel:focus-within {
-  outline: 3px solid var(--_panel-color);
-  outline-offset: 4px;
 }
 
 .accordion-trigger {
